# codex_testing

./: .pre-commit-config.yaml  ENHANCED_ONTOLOGY.md  Makefile  README.md  demo.py  pyproject.toml  pytest  sample_agent_trace.json
.claude/: settings.local.json
agent_log_ontology/: __init__.py  __main__.py
agent_log_ontology/connectors/: __init__.py  enhanced_openai_traces.py  openai_traces.py
agent_log_ontology/ontology/: __init__.py  enhanced_run.py  run.py
agent_log_ontology/ontology/layers/: __init__.py  action.py  cognition.py  identity.py  interaction.py  oversight.py  perception.py  state.py
agent_log_ontology/samples/: openai_example.json
agent_log_ontology/tests/: test_enhanced_ontology.py  test_openai_connector.py
agentlogontology/: __init__.py  model.py  parser.py  serialization.py
