[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_log_ontology"
version = "0.1.0"
description = "Agent Log Ontology"
requires-python = ">=3.11"
authors = [{name = "OpenAI", email = ""}]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "pytest",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_log_ontology*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-ra"

